<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="18dp"
        android:paddingBottom="14dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/backToListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:backgroundTint="@color/white"
            android:textColor="@color/greenPrimary"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/title_add_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_plant"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/greenPrimary"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/etPlantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plant_name"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/primaryText"
            android:backgroundTint="#3F51B5"/>

        <EditText
            android:id="@+id/etPlantDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scientific_name"
            android:minHeight="48dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/primaryText"
            android:backgroundTint="#3F51B5"/>

        <EditText
            android:id="@+id/etPlantWatering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/watering"
            android:minHeight="48dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/primaryText"
            android:backgroundTint="#3F51B5"/>

        <EditText
            android:id="@+id/etPlantSunlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sunlight"
            android:minHeight="48dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/primaryText"
            android:backgroundTint="#3F51B5"/>

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/greenPrimary"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/ivPlantImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:background="#BDBDBD" />

        <Button
            android:id="@+id/btnSavePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_plant"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/greenPrimary"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
