<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivPlantImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:background="#BDBDBD"
            android:contentDescription="@string/plant_image"
            android:scaleType="centerCrop" />
    <LinearLayout
        android:id="@+id/editHintContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/ivEditHint"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="edit"
            android:src="@android:drawable/ic_menu_edit"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvHintEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" hold to edit "
            android:textColor="@color/Plant_top_color"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>

        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/add_to_favorites"
            android:src="@drawable/add_plus" />

        <TextView
            android:id="@+id/tvPlantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/plant_name"
            android:textColor="@color/greenPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWateringInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/watering"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tvSunlightInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunlight"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
