<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:padding="16dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/ivPlantImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/greenLight"
            android:textColor="@color/greenPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/imageLimitGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="300dp" />

        <ImageView
            android:id="@+id/ivPlantImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:background="#BDBDBD"
            android:contentDescription="@string/plant_image"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintBottom_toTopOf="@id/imageLimitGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="16:9" />

        <TextView
            android:id="@+id/tvPlantName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plant_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/greenPrimary"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/imageLimitGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvScientificName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scientific Name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvPlantName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvWateringInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="watering_format"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvScientificName"
            app:layout_constraintStart_toStartOf="parent" />
<!--
        <ImageView
            android:id="@+id/ivLegendInfo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/plantpal_icon_small"
            android:contentDescription="Legend Info"
            app:layout_constraintTop_toTopOf="@id/tvWateringInfo"
            app:layout_constraintBottom_toBottomOf="@id/tvWateringInfo"
            app:layout_constraintStart_toEndOf="@id/tvWateringInfo"
            app:layout_constraintMarginStart="8dp" />-->
        <TextView
            android:id="@+id/tvSunlightInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="sunlight_format"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvWateringInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardReminderOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSunlightInfo"
            tools:layout_editor_absoluteX="151dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set Watering Reminder"
                    android:textColor="@color/greenPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgWateringFrequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/rbFrequent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frequency_frequent"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/rbAverage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frequency_average"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/rbMinimum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frequency_minimum"
                        android:textColor="@color/black" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnAddReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/greenPrimary"
                    android:text="@string/set_water_reminder"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnTestReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/greenLight"
                    android:text="Test Reminder (10s)"
                    android:textColor="@color/greenPrimary" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView> 