<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:padding="16dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/ivPlantImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/greenLight"
            android:textColor="@color/greenPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/imageLimitGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="315dp" />

        <ImageView
            android:id="@+id/ivPlantImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="#BDBDBD"
            android:contentDescription="@string/plant_image"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintBottom_toTopOf="@id/imageLimitGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="16:9" />

        <TextView
            android:id="@+id/tvPlantName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plant_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/greenPrimary"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/imageLimitGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvScientificName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="scientific_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvPlantName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvWateringInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="watering_format"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvScientificName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSunlightInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="sunlight_format"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvWateringInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnViewCareTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_water_reminder"
            android:backgroundTint="@color/greenPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@id/tvSunlightInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
